# nanomsg_ipc

./: CMakeLists.txt  LICENSE  README.md
ipc_adapter/: CMakeLists.txt  ipc_adapter.cpp  ipc_client.cpp  ipc_client.hpp  ipc_common.hpp
ipc_adapter/interfaces/: ipc_interface.hpp
service/: CMakeLists.txt  service_main.cpp
ui/: CMakeLists.txt  main.cpp
ui/interfaces/: ipc_types.hpp
ui/lib/: libnanomsg.so.6.0.1
